Prepare for Java 15