@@ -43,11 +43,11 @@
     <info.builder>${project.organization.name}</info.builder>
 
     <!-- Build options -->
-    <java.version>11</java.version>
+    <java.version>15</java.version>
     <java.compiler.release>${java.compiler.target}</java.compiler.release>
     <java.compiler.source>${java.version}</java.compiler.source>
     <java.compiler.target>${java.version}</java.compiler.target>
-    <java.compiler.lint>all</java.compiler.lint>
+    <java.compiler.lint>all,-module</java.compiler.lint>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -98,7 +98,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.0.0-M2</version>
+        <version>3.0.0-M3</version>
 
         <executions>
           <execution>
@@ -137,6 +137,7 @@
           <compilerArgs>
             <arg>-Xlint:${java.compiler.lint}</arg>
             <arg>--module-version=${module.version}</arg>
+            <arg>--enable-preview</arg>arg>
           </compilerArgs>
 
           <showDeprecation>true</showDeprecation>
@@ -209,7 +210,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
+        <version>3.0.0-M5</version>
+
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
